# os-census

./: .gitignore  .gitmodules  README.md  SETUP.md  experimento_so_dockerhub.md  reproduce.sh
multiscan/: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
multiscan/config/: multiscan.yaml  scanners.yaml  smoke.yaml
multiscan/docker/arachni/: Dockerfile  entrypoint.sh
multiscan/docker/find-sec-bugs/: Dockerfile  entrypoint.sh
multiscan/docker/govulncheck/: Dockerfile  entrypoint.sh
multiscan/docker/nuclei/: Dockerfile
multiscan/docker/pip-audit/: Dockerfile  entrypoint.sh
multiscan/docker/whispers/: Dockerfile
multiscan/scripts/: advanced_figures.py  build-images.sh  build-raw-archive.py  claim1.sh  claim2.sh  claim3.sh  claim4.sh  consolidate.py  figstyle.py  figures.py  insights.py  lib-claims.sh  minimal-test.sh  paper_figures.py  reparse-osv.py  reproduce-reduced.sh
multiscan/src/scanners/: __init__.py  cli.py  config.py  models.py  util.py
multiscan/src/scanners/adapters/: __init__.py  arachni.py  bandit.py  base.py  brakeman.py  cdxgen.py  checkov.py  clair.py  clamav.py  dependency_check.py  detect_secrets.py  dockle.py  droopescan.py  find_sec_bugs.py  gitleaks.py  gosec.py  govulncheck.py  grype.py  httpx.py  jaeles.py  kube_linter.py  nikto.py  njsscan.py  nmap.py  nuclei.py  osv.py  pip_audit.py  registry.py  semgrep.py  sqlmap.py  syft.py  testssl.py  (+7 more)
multiscan/tests/: test_adapters.py  test_analysis.py  test_config_and_sources.py  test_http_queue_retry.py  test_normalize.py  test_queue.py  test_store_artifacts.py
(+77 files in other folders)
